--- a/matrix.html
+++ b/matrix.html
@@ -103,7 +103,7 @@
 
    
     <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don't you think that all of this should change? <strong>In the near future</strong> Starting <strong>With this Portfolio</strong> do you think that?</q>
+        <q>Don't you think that all of this should change? <strong>In the near future</strong> Starting <strong>With this website</strong> do you think that?</q>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
@@ -125,7 +125,7 @@
 
     
     <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>I want to say that this presentation <strong>does not</strong> explain the details of my experience and you can see my <a href="https://mohameddev19.github.io/Curriculum-Vitae/">Portfolio</a>,<br/>
+        <p>I want to say that this presentation <strong>does not</strong> explain the details of my experience and you can see my <a href="https://www.libanna.net">Portfolio</a>,<br/>
              but the idea is to use web technologies to make an interesting presentation <br/>let's continue <br/>
     </div>
 
